err/ziggy.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Ziggy-0.1.3.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/ziggy'...
Listing './lib/python3.5/site-packages/ziggy/GraphReduce'...
Compiling './lib/python3.5/site-packages/ziggy/GraphReduce/Degree_mapper.py'...
***   File "./lib/python3.5/site-packages/ziggy/GraphReduce/Degree_mapper.py", line 50
    print node
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ziggy/GraphReduce/Degree_reducer.py'...
***   File "./lib/python3.5/site-packages/ziggy/GraphReduce/Degree_reducer.py", line 66
    print M[key]
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ziggy/GraphReduce/LostMass_mapper.py'...
***   File "./lib/python3.5/site-packages/ziggy/GraphReduce/LostMass_mapper.py", line 52
    print node
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ziggy/GraphReduce/LostMass_reducer.py'...
***   File "./lib/python3.5/site-packages/ziggy/GraphReduce/LostMass_reducer.py", line 14
    print line.strip()
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ziggy/GraphReduce/PBFS_mapper.py'...
***   File "./lib/python3.5/site-packages/ziggy/GraphReduce/PBFS_mapper.py", line 76
    print n + " pathlen: 0.0" + " path: "
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ziggy/GraphReduce/PBFS_reducer.py'...
***   File "./lib/python3.5/site-packages/ziggy/GraphReduce/PBFS_reducer.py", line 78
    print M[key]
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ziggy/GraphReduce/PageRank_mapper.py'...
***   File "./lib/python3.5/site-packages/ziggy/GraphReduce/PageRank_mapper.py", line 53
    print node
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ziggy/GraphReduce/PageRank_reducer.py'...
***   File "./lib/python3.5/site-packages/ziggy/GraphReduce/PageRank_reducer.py", line 31
    print " ".join(line)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ziggy/GraphReduce/gr_path.py'...
***   File "./lib/python3.5/site-packages/ziggy/GraphReduce/gr_path.py", line 47
    print "at sssp, name = " + name
                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ziggy/hdmc'...
Compiling './lib/python3.5/site-packages/ziggy/hdmc/checkpoint_frame_save.py'...
***   File "./lib/python3.5/site-packages/ziggy/hdmc/checkpoint_frame_save.py", line 44
    print this_checkpoint+'==HDMC_CHECKPOINT==LINE=='+ str(line_count) + '=='+line.strip()
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ziggy/hdmc/hdfs'...
Compiling './lib/python3.5/site-packages/ziggy/hdmc/hdmc.py'...
***   File "./lib/python3.5/site-packages/ziggy/hdmc/hdmc.py", line 394
    print hdfs.cat(hdfs_filename+"/part*")["stdout"]
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ziggy/hdmc/test'...
Compiling './lib/python3.5/site-packages/ziggy/hdmc/test/fetch_books.py'...
***   File "./lib/python3.5/site-packages/ziggy/hdmc/test/fetch_books.py", line 7
    print f.read()
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ziggy/hdmc/test/line_counter.py'...
***   File "./lib/python3.5/site-packages/ziggy/hdmc/test/line_counter.py", line 13
    print str(counter) + " " + re.sub("./", "", file)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ziggy/hdmc/test/line_sum.py'...
***   File "./lib/python3.5/site-packages/ziggy/hdmc/test/line_sum.py", line 23
    print str(total) + " total"
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ziggy/hdmc/test/numpy_mean_reduction.py'...
***   File "./lib/python3.5/site-packages/ziggy/hdmc/test/numpy_mean_reduction.py", line 41
    print "mean of means: "+str(mu_mu)
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ziggy/hdmc/test/numpy_random_means.py'...
***   File "./lib/python3.5/site-packages/ziggy/hdmc/test/numpy_random_means.py", line 17
    print "mu:"+str(numpy.mean(x))
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ziggy/util.py'...
***   File "./lib/python3.5/site-packages/ziggy/util.py", line 206
    print hadoop_call
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './share'...
Listing './share/python-wheels'...
